Baseline Survey Test fixes
Label fixes

--- a/force-app/main/default/classes/BaselineSurveyRemote.cls
+++ b/force-app/main/default/classes/BaselineSurveyRemote.cls
@@ -11,18 +11,15 @@ public class BaselineSurveyRemote {
                 throw new SurveyService.SurveyException('Survey not available');
             }
             ParticipantService.ParticipantState participantState = ParticipantService.getParticipantState();
-            Id surveyId = participantState.ctp.Survey__c;
-            if(participantState.value != ParticipantService.ParticipantStates.PARTICIPANT || surveyId == null) {
-                throw new SurveyService.SurveyException('Survey not available');
-            }
             List<Task> tasks = TaskService.getInstance().getTasksCommon('Task_Code__c =\'' +
                     TaskService.TASK_CODE_COMPLETE_SURVEY +'\' AND ' + TaskService.getInstance().getOpenTasksFilter());
             if(tasks.size() == 0) throw new SurveyService.SurveyException('Survey already completed');
 
             InitData initData = new InitData();
             initData.ctp = participantState.ctp;
-            initData.surveyLink = SurveyService.getInstance().getSurveyLink(surveyId);
-            initData.surveyName = participantState.ctp.Survey__r.Name;
+            SurveyService.SurveyWrapper sw =  SurveyService.getInstance().getSurveyLinkForCTP(initData.ctp);
+            initData.surveyLink = sw.url;
+            initData.surveyName = sw.name;
 
             return JSON.serialize(initData);
         }catch (Exception e){
