--- a/force-app/main/default/classes/SurveyService.cls
+++ b/force-app/main/default/classes/SurveyService.cls
@@ -5,6 +5,16 @@
 public with sharing class SurveyService {
 
     public class SurveyException extends Exception {}
+    
+    public class SurveyWrapper{
+        public String name;
+        public String url;
+        
+        public SurveyWrapper(String name, String url){
+            this.name = name;
+            this.url = url;
+        }
+    }
 
     private static SurveyService instance;
 
@@ -16,24 +26,33 @@ public with sharing class SurveyService {
     public static void setMock(StubProvider mock) {
         instance = (SurveyService) Test.createStub(SurveyService.class, mock);
     }
+    
+    public SurveyWrapper getSurveyLinkForCTP(Clinical_Trial_Profile__c ctp){
+        if(ctp.Survey__c == null) {
+            throw new SurveyService.SurveyException('Survey not available');
+        }
+        return getSurveyLink(ctp.Survey__c);
+    }
 
-    public String getSurveyLink(Id surveyId) {
+    public SurveyWrapper getSurveyLink(Id surveyId) {
         List<SurveyInvitation> surveyInvitations = [
-                SELECT Id, InvitationLink
+                SELECT Id, InvitationLink, Survey.Name
                 FROM SurveyInvitation
                 WHERE SurveyId = :surveyId
         ];
         if(surveyInvitations.isEmpty()) throw new SurveyService.SurveyException('SurveyInvitation not available');
 
         String link;
+        String name;
         for(SurveyInvitation inv : surveyInvitations) {
             if(inv.InvitationLink.contains('.force.com')) {
                 link = inv.InvitationLink;
+                name = inv.Survey.Name;
                 break;
             }
         }
         if(link == null) throw new SurveyService.SurveyException('Invitation link not found');
 
-        return link;
+        return new SurveyWrapper(name, link);
     }
 }
