--- a/force-app/main/default/classes/Test_BaselineSurveyRemote.cls
+++ b/force-app/main/default/classes/Test_BaselineSurveyRemote.cls
@@ -10,7 +10,7 @@ private class Test_BaselineSurveyRemote {
         public Object handleMethodCall(Object stubbedObject, String stubbedMethodName, Type returnType,
                 List<Type> listOfParamTypes, List<String> listOfParamNames, List<Object> listOfArgs
         ) {
-            if (stubbedMethodName == 'getSurveyLink') return 'https://surveygismo.com';
+            if (stubbedMethodName == 'getSurveyLinkForCTP') return new SurveyService.SurveyWrapper('some', 'url');
             return null;
         }
     }
