--- a/force-app/main/default/classes/AuraHelper.cls
+++ b/force-app/main/default/classes/AuraHelper.cls
@@ -6,6 +6,9 @@ public class AuraHelper {
     
     public static Object throwException(Exception e){
         System.debug('THROW EXCEPTION: ' + e.getMessage() + '\n' + e.getStackTraceString());
-        throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
+        String errorMessage = e.getMessage() + '\n' + e.getStackTraceString();
+        Exception newException = new AuraHandledException(errorMessage);
+        newException.setMessage(errorMessage);
+        throw newException;
     }
 }
