--- a/force-app/main/default/classes/AuraHelper.cls
+++ b/force-app/main/default/classes/AuraHelper.cls
@@ -5,10 +5,10 @@
 public class AuraHelper {
     
     public static Object throwException(Exception e){
-        System.debug('THROW EXCEPTION: ' + e.getMessage() + '\n' + e.getStackTraceString());
         String errorMessage = e.getMessage() + '\n' + e.getStackTraceString();
-        Exception newException = new AuraHandledException(errorMessage);
-        newException.setMessage(errorMessage);
-        throw newException;
+        System.debug('THROW EXCEPTION: ' + errorMessage);
+        Exception auraException = new AuraHandledException(errorMessage);
+        auraException.setMessage(errorMessage);
+        throw auraException;
     }
 }
