Fixed email templates

--- a/force-app/main/default/classes/EmailTemplateController.cls
+++ b/force-app/main/default/classes/EmailTemplateController.cls
@@ -55,7 +55,13 @@ global without sharing class EmailTemplateController {
     global String headerValue {
         get{
             setDefaultValues();
-            return headerValue;
+            if(headerValue.contains(PARAM_PREFIX)){
+                String resValue = TranslateHelper.replaceParams(headerValue, PARAM_PREFIX, getDataProvider().parameters);
+                return prepareLineBreaks(resValue);
+            }
+            else{
+                return headerValue;
+            }
         }
         set;
     }
