--- a/force-app/main/default/classes/ParametersDataProvider.cls
+++ b/force-app/main/default/classes/ParametersDataProvider.cls
@@ -28,6 +28,7 @@ public without sharing class ParametersDataProvider {
         this.parametersProviderName = parametersProviderName;
         parameters = new Map<String, String>();
         updateRecipientName();
+        System.debug('OBJECT>>>>>>>>>>' + sourceId.getSobjectType());
         if(sourceId != null){
             if(parametersProviderName == null){
                 if (sourceId.getSobjectType() == Participant_Enrollment__c.getSObjectType()) {
@@ -235,14 +236,16 @@ public without sharing class ParametersDataProvider {
                         Principal_Investigator__c,
                         Clinical_Trial_Profile__r.Study_Title__c,
                         Clinical_Trial_Profile__r.Study_Code_Name__c,
-                        Study_Site_Phone__c
+                        Study_Site_Phone__c,
+                        ReferralNetworkId__r.Name
                 FROM Study_Site__c
                 WHERE Id = :ssId
         ];
         
         parameters = new Map<String, String>{
                 'PIName' => getFullContactName(ss.Principal_Investigator__r),
-                'PILanguage' => ss.Principal_Investigator__r.Language__c
+                'PILanguage' => ss.Principal_Investigator__r.Language__c,
+                'ReferralNetworkName' => ss.ReferralNetworkId__r.Name
         };
         
         TranslateHelper.translate(ss, getUserLanguage());
