--- a/force-app/main/default/classes/PSETriggerHandler.cls
+++ b/force-app/main/default/classes/PSETriggerHandler.cls
@@ -3,58 +3,68 @@
  */
 
 public without sharing class PSETriggerHandler {
-    
+
     // Handlers: -------------------------------------------------------------------------------------------------------
-    
-    public class SetDefaultFieldsBeforeUpsertHandler extends TriggerHandler{
-        
+
+    public class SetDefaultFieldsBeforeUpsertHandler extends TriggerHandler {
+
         public override void beforeInsert(List<SObject> newList) {
             setDefaultFieldsBeforeUpsert(newList);
         }
-        
+
         public override void beforeUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
             setDefaultFieldsBeforeUpsert(newList);
         }
     }
-    
-    public class ProcessStatusHistoryHandler extends TriggerHandler{
-        
+
+    public class ProcessStatusHistoryHandler extends TriggerHandler {
+
         public override void afterInsert(List<SObject> newList) {
             processStatusHistory(newList, null);
         }
-        
+
         public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-            processStatusHistory(newList, (Map<Id, Participant_Study_Enrollment__c>)oldMap);
+            processStatusHistory(newList, (Map<Id, Participant_Study_Enrollment__c>) oldMap);
         }
     }
-    
-    public class CreateCompleteBaselineSurveyTaskHandler extends TriggerHandler{
-        
+
+    public class CreateCompleteBaselineSurveyTaskHandler extends TriggerHandler {
+
         public override void afterInsert(List<SObject> newList) {
             createCompleteBaselineSurveyTask(newList);
         }
-    
+
     }
-    
-    public class DeactivateDeceasedUsersHandler extends TriggerHandler{
-        
-        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-            deactivateDeceasedUsers(newList, (Map<Id, Participant_Study_Enrollment__c>)oldMap);
+
+    public class CreateParticipantSurveysHandler extends TriggerHandler {
+
+        public override void afterInsert(List<SObject> newList) {
+            createBasePS(newList);
         }
-    
+
+        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+        }
     }
-    
-    public class CreateWelcomeToStudyAlertHandler extends TriggerHandler{
+
+    public class DeactivateDeceasedUsersHandler extends TriggerHandler {
+
+        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            deactivateDeceasedUsers(newList, (Map<Id, Participant_Study_Enrollment__c>) oldMap);
+        }
+
+    }
+
+    public class CreateWelcomeToStudyAlertHandler extends TriggerHandler {
 
         public override void afterInsert(List<SObject> newList) {
             List<Alert__c> alerts = new List<Alert__c>();
-            for(Participant_Study_Enrollment__c pse : (List<Participant_Study_Enrollment__c>) newList) {
+            for (Participant_Study_Enrollment__c pse : (List<Participant_Study_Enrollment__c>) newList) {
                 alerts.add(new Alert__c(
                         Contact__c = pse.Participant_Contact__c,
                         Alert_Code__c = 'Welcome_to_the_Study',
                         Record_ID__c = pse.Participant_Enrollment__c
                 ));
-                for(Contact contactDelegate : PatientDelegateService.getDelegateContacts(pse.Participant_Contact__c)) {
+                for (Contact contactDelegate : PatientDelegateService.getDelegateContacts(pse.Participant_Contact__c)) {
                     alerts.add(new Alert__c(
                             Contact__c = contactDelegate.Id,
                             Alert_Code__c = 'Welcome_to_the_Study_Patient_Delegates',
@@ -67,7 +77,7 @@ public without sharing class PSETriggerHandler {
         }
     }
 
-    public class SendDropOutEmailHandler extends TriggerHandler{
+    public class SendDropOutEmailHandler extends TriggerHandler {
 
         protected override void onAfterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
             sendDropEmails((List<Participant_Study_Enrollment__c>) newList, (Map<Id, Participant_Study_Enrollment__c>) oldMap);
@@ -75,37 +85,41 @@ public without sharing class PSETriggerHandler {
     }
 
     // Logic: ----------------------------------------------------------------------------------------------------------
-    
+
     @TestVisible
-    private static void setDefaultFieldsBeforeUpsert(List<Participant_Study_Enrollment__c> newList){
+    private static void setDefaultFieldsBeforeUpsert(List<Participant_Study_Enrollment__c> newList) {
         Set<Id> ssIds = new Set<Id>();
         Set<Id> participantIds = new Set<Id>();
-        for (Participant_Study_Enrollment__c pse : newList){
+        for (Participant_Study_Enrollment__c pse : newList) {
             ssIds.add(pse.Study_Site__c);
             participantIds.add(pse.Participant__c);
         }
         Map<Id, Study_Site__c> studySitesMap = new Map<Id, Study_Site__c>([
-                SELECT Id, Principal_Investigator__c FROM Study_Site__c WHERE Id IN: ssIds
+                SELECT Id, Principal_Investigator__c
+                FROM Study_Site__c
+                WHERE Id IN:ssIds
         ]);
         Map<Id, Participant__c> participantsMap = new Map<Id, Participant__c>([
-                SELECT Id, Contact__c FROM Participant__c WHERE Id IN: participantIds
+                SELECT Id, Contact__c
+                FROM Participant__c
+                WHERE Id IN:participantIds
         ]);
-        for (Participant_Study_Enrollment__c pse :newList){
+        for (Participant_Study_Enrollment__c pse : newList) {
             pse.PI_Contact__c = null;
             pse.Participant_Contact__c = null;
-            if(pse.Study_Site__c != null) pse.PI_Contact__c = studySitesMap.get(pse.Study_Site__c).Principal_Investigator__c;
-            if(pse.Participant__c != null) {
+            if (pse.Study_Site__c != null) pse.PI_Contact__c = studySitesMap.get(pse.Study_Site__c).Principal_Investigator__c;
+            if (pse.Participant__c != null) {
                 pse.Participant_Contact__c = participantsMap.get(pse.Participant__c).Contact__c;
             }
         }
     }
-    
+
     @TestVisible
-    private static void processStatusHistory(List<Participant_Study_Enrollment__c> newList, Map<Id, Participant_Study_Enrollment__c> oldMap){
+    private static void processStatusHistory(List<Participant_Study_Enrollment__c> newList, Map<Id, Participant_Study_Enrollment__c> oldMap) {
         List<PSE_Status_History__c> pseStatusHistories = new List<PSE_Status_History__c>();
-        for(Participant_Study_Enrollment__c pse : newList){
-            if(oldMap == null || (oldMap != null && pse.Status__c != oldMap.get(pse.Id).Status__c)){
-                if(pse.Status__c == PSEService.PSE_STATUS_ENROLLED){
+        for (Participant_Study_Enrollment__c pse : newList) {
+            if (oldMap == null || (oldMap != null && pse.Status__c != oldMap.get(pse.Id).Status__c)) {
+                if (pse.Status__c == PSEService.PSE_STATUS_ENROLLED) {
                     pseStatusHistories.add(new PSE_Status_History__c(
                             PSE__c = pse.Id,
                             Status__c = pse.Status__c,
@@ -114,22 +128,23 @@ public without sharing class PSETriggerHandler {
                 }
             }
         }
-        if(pseStatusHistories.size() > 0) insert pseStatusHistories;
+        if (pseStatusHistories.size() > 0) insert pseStatusHistories;
     }
-    
+
     @TestVisible
-    private static void createCompleteBaselineSurveyTask(List<Participant_Study_Enrollment__c> newList){
+    private static void createCompleteBaselineSurveyTask(List<Participant_Study_Enrollment__c> newList) {
         List<User> users = [
                 SELECT Id, ContactId
                 FROM User
                 WHERE ContactId IN (
                         SELECT Participant_Contact__c
                         FROM Participant_Study_Enrollment__c
-                        WHERE Id IN: newList)
+                        WHERE Id IN:newList
+                )
         ];
 
         Map<Id, Id> idsToUsers = new Map<Id, Id>();
-        for(User taskOwner : users) idsToUsers.put(taskOwner.ContactId, taskOwner.Id);
+        for (User taskOwner : users) idsToUsers.put(taskOwner.ContactId, taskOwner.Id);
 
         List<Participant_Study_Enrollment__c> pseList = [
                 SELECT Id,
@@ -140,7 +155,7 @@ public without sharing class PSETriggerHandler {
                 WHERE Id IN:newList
         ];
         List<Task> tasks = new List<Task>();
-        for(Participant_Study_Enrollment__c pse : pseList) {
+        for (Participant_Study_Enrollment__c pse : pseList) {
             Id ownerId = idsToUsers.get(pse.Participant_Contact__c);
             if (pse.Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c == 'Yes' && ownerId != null) {
                 tasks.add(TaskService.getInstance()
@@ -158,14 +173,14 @@ public without sharing class PSETriggerHandler {
                         Participant__r.Contact__c,
                         Status__c
                 FROM Participant_Study_Enrollment__c
-                WHERE Id IN: newList
+                WHERE Id IN:newList
         ];
-        for(Participant_Study_Enrollment__c pse : pseList) {
-            if(pse.Status__c == PSEService.PSE_STATUS_DECEASED && pse.Status__c != oldMap.get(pse.Id).Status__c) {
+        for (Participant_Study_Enrollment__c pse : pseList) {
+            if (pse.Status__c == PSEService.PSE_STATUS_DECEASED && pse.Status__c != oldMap.get(pse.Id).Status__c) {
                 contactIds.add(pse.Participant__r.Contact__c);
             }
         }
-        if(!contactIds.isEmpty()) deactivateUsers(contactIds);
+        if (!contactIds.isEmpty()) deactivateUsers(contactIds);
     }
 
     @Future
@@ -175,7 +190,7 @@ public without sharing class PSETriggerHandler {
                 FROM User
                 WHERE ContactId IN :contactIds
         ];
-        for(User u : users) u.IsActive = false;
+        for (User u : users) u.IsActive = false;
         update users;
     }
 
@@ -185,13 +200,60 @@ public without sharing class PSETriggerHandler {
             Map<Id, Participant_Study_Enrollment__c> oldMap
     ) {
         List<Messaging.SingleEmailMessage> messages = new List<Messaging.SingleEmailMessage>();
-        for(Participant_Study_Enrollment__c pse : newList) {
-            if(pse.Status__c != oldMap.get(pse.Id).Status__c &&
+        for (Participant_Study_Enrollment__c pse : newList) {
+            if (pse.Status__c != oldMap.get(pse.Id).Status__c &&
                     pse.Status__c == PSEService.PSE_STATUS_DROP_OUT) {
                 messages.add(SendEmailTemplate.createEmail('Patient_dropped_out', pse.Participant_Contact__c, pse.Id));
             }
         }
 
         SendEmailTemplate.sendEmailMessages(messages);
+    }
+
+    @TestVisible
+    private static void createBasePS(List<Participant_Study_Enrollment__c> newList) {
+        Map<Id, Id> trialToPSE = new Map<Id, Id>();
+        List<Id> trialProfiles = new List<Id>();
+        for (Participant_Study_Enrollment__c pse : newList) {
+            trialProfiles.add(pse.Clinical_Trial_Profile__c);
+            trialToPSE.put(pse.Clinical_Trial_Profile__c, pse.Id);
+        }
+
+        List<Trial_Survey__c> trialSurveys = [
+                SELECT
+                        Active_After_Days__c,
+                        Active_On_Status__c,
+                        Clinical_Trial_Profile__c,
+                        Expires_After_Days__c,
+                        Id,
+                        Survey__c,
+                        Visible_To_Delegates__c
+                FROM Trial_Survey__c
+                WHERE Clinical_Trial_Profile__c IN: trialProfiles
+                    AND (Active_On_Status__c =: PSEService.PSE_STATUS_ENROLLED
+                    OR Active_After_Days__c != NULL)
+        ];
+        if (trialSurveys.isEmpty()) return;
+
+        List<Participant_Survey__c> participantSurveys = new List<Participant_Survey__c>();
+        for (Trial_Survey__c ts : trialSurveys) {
+            Participant_Survey__c ps = new Participant_Survey__c();
+            ps.Participant_Study_Enrollment__c = trialToPSE.get(ts.Clinical_Trial_Profile__c);
+            ps.Visible_To_Delegates__c = ts.Visible_To_Delegates__c;
+
+            SurveyService.SurveyWrapper surveyWrapper = SurveyService.getInstance().getSurveyLink(ts.Survey__c);
+            ps.Survey_Name__c = surveyWrapper.name;
+            ps.Invitation_Link__c = surveyWrapper.url;
+
+            Date showDate = System.today();
+            if (ts.Active_After_Days__c != null) showDate = showDate.addDays((Integer) ts.Active_After_Days__c);
+            ps.Show_Date__c = showDate;
+
+            if (ts.Expires_After_Days__c != null) ps.Expiration_Date__c = showDate.addDays((Integer) ts.Expires_After_Days__c);
+
+            participantSurveys.add(ps);
+        }
+
+        if(!participantSurveys.isEmpty()) insert participantSurveys;
     }
 }
